<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/imgCoffee"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_splashscreen"
        android:contentDescription="@string/imageview" />

    <TextView
        android:id="@+id/tvTitleSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/futura_bold"
        android:letterSpacing="0.4"
        android:text="@string/title_splashscreen"
        android:textColor="#613818"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSubTitleSplashScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSubTitleSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/futura_book"
        android:letterSpacing="1"
        android:text="@string/subtitle_splashscreen"
        android:textColor="#613818"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/coffeeAnimation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/coffeeAnimation"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/coffee_animation"
        app:lottie_speed="1.5" />


</androidx.constraintlayout.widget.ConstraintLayout>