<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F5FA"
    tools:context=".activity.user.PersonalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F6F5FA">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/imageview"
                android:src="@drawable/back_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="Liên hệ và góp ý"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/imgBack"
                app:layout_constraintStart_toEndOf="@+id/imgBack"
                app:layout_constraintTop_toTopOf="@+id/imgBack"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/itemSwitchBoard"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_contact_call" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/manrope_semibold"
                    android:text="Tổng đài"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/contact_switchboard"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemWebsite"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemEmail">>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_contact_website" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/manrope_semibold"
                    android:text="Website"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/contatc_website"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemFaceBook"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemWebsite">>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_contact_facebook" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/manrope_semibold"
                    android:text="Facebook"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/contact_facebook"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemFeedback"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemFaceBook">>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_contact_feedback" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_semibold"
                    android:text="Gửi góp ý về ứng dụng"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemSwitchBoard">>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:src="@drawable/outline_email_black_48" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/manrope_semibold"
                    android:text="Email"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/contact_email"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>